--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 27
     defaultConfig {
-        applicationId "com.example.joffrey.com.example.william.pokedex"
+        applicationId "com.example.william.pokedex"
         minSdkVersion 24
         targetSdkVersion 27
         versionCode 1
